Fixed showcase overlay alignment and scaling

--- a/src/Pages/01-Showcase/Showcase.scss
+++ b/src/Pages/01-Showcase/Showcase.scss
@@ -7,8 +7,8 @@
 .showcase-page-container {
   position: relative;
   // left: calc(50% - 300px);
-  left: calc(10vw + 5vw);
-  top: 200px;
+  left: calc(180px + 5vw);
+  top: calc(180px + 5vw);
   height: calc(100vh - 300px);
   width: 75vw;
   overflow: auto;
@@ -19,11 +19,38 @@
   display: none; /* Safari and Chrome */
 }
 
+// .showcase-gradient{
+//     position:absolute;
+//     pointer-events: none;
+//     bottom:0; 
+//     left: calc(10vw + 5vw);
+//     width: 75vw;
+//     height:300px;
+//     background: rgb(0,8,24);
+//     background: radial-gradient(circle at bottom, rgba(0,8,24,0.9) 0%, rgba(0,8,24,0) 100%);
+//   }
+
+// .showcase-fog{
+//   position: absolute;
+//   bottom: 0;
+//   left: calc(10vw + 5vw);
+//   pointer-events: none;
+// }
 .showcase-items-container {
   width: calc(100% - 250px);
   display: grid;
   grid-template-columns: repeat(2, 35vw);
   gap: 5vw;
+}
+
+.showcase-items-container::after{
+  content: "";
+  position: fixed;
+  left: calc(180px + 5vw);
+  bottom: 0;
+  height: 10%;
+  width: 75vw;
+  background: linear-gradient(transparent, rgba(63, 62, 2, 0.3));
 }
 .showcase-items-container a {
   text-decoration: none;
@@ -31,7 +58,7 @@
 
 .showcase-item {
   display: grid;
-  grid-template-columns: 2em 35vw;
+  grid-template-columns: 2em 30vw;
 }
 
 .showcase-title-text {
@@ -41,11 +68,12 @@
   grid-column: 2/3;
   grid-row: 1;
   width: max-content;
+  padding-bottom: 0.3em;
 }
 
 .showcase-image {
-  height: 30vw;
-  width: 35vw;
+  height: 20vw;
+  width: 30vw;
   object-fit: cover;
   grid-column: 2;
   grid-row: 2;
@@ -56,6 +84,7 @@
   grid-row: 1/3;
   font-size: calc(1em + 0.5vw);
   padding-top: 0.3em;
+  margin-left: -0.2em;
   writing-mode: vertical-rl;
   transform: rotate(180deg);
 }
@@ -73,8 +102,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 30vw;
-  width: 35vw;
+  height: 20vw;
+  width: 30vw;
   opacity: 0.92;
   transition: 0.5 ease;
   background-color: $circuit-yellow;
@@ -84,18 +113,19 @@
   color: black;
   text-align: center;
   font-weight: bolder;
-  width: 35vw;
-  height: 30vw;
+  height: 20vw;
+  width: 30vw;
+  font-size: calc(0.2em + 0.5vw);
 }
 .showcase-overlay-text-statement {
-  padding-top: 5vh;
+  padding-top: 2vw;
   text-align: justify center;
   margin: 0 2vw;
 }
 .showcase-overlay-text-icons-title {
   position: absolute;
   left: 37%;
-  bottom: 7vw;
+  bottom: 5vw;
 }
 .showcase-overlay-text-icons-icons {
   position: absolute;
@@ -108,8 +138,8 @@
 }
 
 .showcase-tech-icon {
-  width: 5vw;
-  max-height: 5vw;
+  width: 4vw;
+  max-height: 4vw;
 }
 
 .showcase-overlay-text p {
